	PR c++/58102 	* typeck2.c (store_init_value): Set it. 	* cp-tree.h (CONSTRUCTOR_MUTABLE_POISON): New. 	* constexpr.c (cxx_eval_outermost_constant_expr): Check it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@217713 138bc75d-0d04-0410-961f-82ee72b054a4